# function_server

./: Dockerfile  README.md  pyproject.toml
src/function_server/: .env  fake_messages.py  function_calling.py  main.py  settings.py  test.http  utils.py
src/function_server/tools/: __init__.py  websearch.py
